[metadata]
name = isdpainn
version = attr: __version__.__version__
author = Kiyou Shibata
author_email = kiyou@iis.u-tokyo.ac.jp
description = A message passing neural network with directional input and inversion symmetry-aware transformation based on PaiNN
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/nmdl-mizo/isdpainn
classifiers = 
# https://pypi.python.org/pypi?:action=list_classifiers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8, <3.12
packages = find:
install_requires = 
    torch
    torch_geometric
    torch_scatter
    torch_sparse
    torch_cluster
    torch_spline_conv
    ocp-models==0.0.3
    ase
    pyyaml
    lmdb
    orjson
    syrupy
    e3nn

[options.extras_require]
dev = 
    pytest
    pytest_benchmark
    ipykernel

[options.packages.find]
exclude =
    tests

[tool:pytest]
addopts = --doctest-modules
testpaths = tests
